[gd_scene load_steps=7 format=3 uid="uid://yilcgy1awakw"]

[ext_resource type="Texture2D" uid="uid://t5e5sxwub1y3" path="res://UI/Modals/modal.png" id="1_1c134"]
[ext_resource type="Script" path="res://Dialogs/AskBuyDialog/AskBuyDialog.gd" id="1_1gshd"]
[ext_resource type="Texture2D" uid="uid://dofqluclsa31o" path="res://UI/Buttons/button_inactive.png" id="2_7rh6h"]
[ext_resource type="Script" path="res://Dialogs/AskBuyDialog/ModalAnswer.gd" id="3_cxnwv"]
[ext_resource type="Texture2D" uid="uid://br6c854rps0ya" path="res://UI/Buttons/button_active.png" id="3_lko4q"]
[ext_resource type="Texture2D" uid="uid://bfishpvyygi0s" path="res://UI/Modals/infoarrow.png" id="3_qty6b"]

[node name="AskBuyDialog" type="Control"]
texture_filter = 1
use_parent_material = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_1gshd")

[node name="AskContainer" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -684.0
offset_top = -530.0
offset_right = -462.0
offset_bottom = -352.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_1c134")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 7
patch_margin_bottom = 8

[node name="AskLabel" type="Label" parent="AskContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 13.0
offset_top = 13.0
offset_right = -12.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
text = "Bonjour, je souhaiterai acheter des pommes de terre.

En avez-vous ?"
horizontal_alignment = 3
autowrap_mode = 2

[node name="NameContainer" type="NinePatchRect" parent="AskContainer"]
show_behind_parent = true
z_as_relative = false
layout_mode = 1
offset_left = 13.0
offset_top = -28.0
offset_right = 120.0
offset_bottom = 25.0
texture = ExtResource("1_1c134")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 7
patch_margin_bottom = 8

[node name="NameLabel" type="Label" parent="AskContainer/NameContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 4.0
grow_horizontal = 2
grow_vertical = 2
text = "Olivier"
horizontal_alignment = 1

[node name="IndicatorLeft" type="TextureRect" parent="AskContainer"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -49.0
offset_right = 39.0
offset_bottom = -9.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("3_qty6b")

[node name="IndicatorRight" type="TextureRect" parent="AskContainer"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -262.0
offset_top = -50.0
offset_right = -222.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("3_qty6b")
flip_h = true

[node name="AcceptAnswer" type="NinePatchRect" parent="." node_paths=PackedStringArray("_ask_buy_dialog")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -684.0
offset_top = -345.0
offset_right = -461.0
offset_bottom = -305.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
texture = ExtResource("2_7rh6h")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
script = ExtResource("3_cxnwv")
_normal_texture = ExtResource("2_7rh6h")
_hover_texture = ExtResource("3_lko4q")
_ask_buy_dialog = NodePath("..")
_is_accept_button = true

[node name="Label" type="Label" parent="AcceptAnswer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 11.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
text = "MARKET.ACCEPT"
vertical_alignment = 1
autowrap_mode = 2

[node name="DeclineAnswer" type="NinePatchRect" parent="." node_paths=PackedStringArray("_ask_buy_dialog")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -684.0
offset_top = -301.0
offset_right = -461.0
offset_bottom = -261.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
texture = ExtResource("2_7rh6h")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
script = ExtResource("3_cxnwv")
_normal_texture = ExtResource("2_7rh6h")
_hover_texture = ExtResource("3_lko4q")
_ask_buy_dialog = NodePath("..")

[node name="Label" type="Label" parent="DeclineAnswer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
text = "MARKET.DECLINE"
vertical_alignment = 1
autowrap_mode = 2

[connection signal="mouse_entered" from="AcceptAnswer" to="AcceptAnswer" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="AcceptAnswer" to="AcceptAnswer" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="DeclineAnswer" to="DeclineAnswer" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="DeclineAnswer" to="DeclineAnswer" method="_on_mouse_exited"]
